player videos home e responsividade