@@ -10,33 +10,46 @@ import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 public class CorsConfig implements WebMvcConfigurer {
 
-    @Value("${cors.allowed.origins:http://localhost:5173,https://holyplay.com.br,http://back.holyplay.com.br:7695,https://back.holyplay.com.br}")
+    @Value("${cors.allowed.origins:*}")
     private String allowedOrigins;
 
     @Override
     public void addCorsMappings(CorsRegistry registry) {
+        boolean allowAll = "*".equals(allowedOrigins.trim());
+        List<String> origins = allowAll ? List.of("*") : Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
         registry.addMapping("/api/**")
-                .allowedOrigins("*")  // PERMITE TODAS AS ORIGENS
+                .allowedOriginPatterns(origins.toArray(new String[0]))
                 .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
                 .allowedHeaders("*")
-                .allowCredentials(false)  // Deve ser false quando allowedOrigins é "*"
+                .allowCredentials(!allowAll) // Só habilita cookies/credenciais quando não for "*"
                 .maxAge(3600);
-                
-        System.out.println("🌐 CORS configurado para TODAS as origens (*)");
+
+        System.out.println("🌐 CORS configurado para: " + String.join(", ", origins));
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));  // PERMITE TODAS AS ORIGENS
+        boolean allowAll = "*".equals(allowedOrigins.trim());
+        List<String> origins = allowAll ? List.of("*") : Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
+        configuration.setAllowedOriginPatterns(origins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);  // Deve ser false com "*"
+        configuration.setAllowCredentials(!allowAll);  // false quando "*", true quando domínios específicos
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
